legacy/k3s/apps/paperless/paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector: { app: paperless }
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
spec:
  replicas: 1
  selector: { matchLabels: { app: paperless } }
  template:
    metadata: { labels: { app: paperless } }
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: paperless-rwx
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-rwx
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-rwx
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: paperless-rwx
              mountPath: /usr/src/paperless/consume
              subPath: consume
      volumes:
        - name: paperless-rwx
          persistentVolumeClaim:
            claimName: paperless-rwx
